# taiga-shell

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: publish.yml
src/taiga_cli/: __init__.py  cli.py
src/taiga_shell/: __init__.py  cli.py
