[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiga-shell"
version = "0.1.0"
description = "Command-line interface for the Taiga project management API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Dmitry K Valberg" },
]
keywords = ["taiga", "cli", "shell", "project-management", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "python-taiga>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
]

[project.scripts]
taiga = "taiga_shell.cli:main"

[project.urls]
Homepage = "https://github.com/gcardinal/taiga-shell"
Repository = "https://github.com/gcardinal/taiga-shell"
Issues = "https://github.com/gcardinal/taiga-shell/issues"

[tool.setuptools.packages.find]
where = ["src"]
